[gd_scene load_steps=7 format=2]

[ext_resource path="res://menus/Rules.gd" type="Script" id=1]
[ext_resource path="res://menus/Layout.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/champagne_limousines/Champagne & Limousines.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/audio/S-19.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/pit.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/zombie-audio.ogg" type="AudioStream" id=6]

[node name="Rules" type="Node"]
script = ExtResource( 1 )

[node name="Layout" parent="." instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 0.0

[node name="Title" parent="Layout/HBoxContainer" index="1"]
text = "Rules"

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Layout/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Layout/Control/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 739.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "The finish a level you must reach the end sound with your hears only."

[node name="EndButton" type="Button" parent="Layout/Control/VBoxContainer/HBoxContainer"]
margin_left = 743.0
margin_right = 871.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "End sound"

[node name="HBoxContainer2" type="HBoxContainer" parent="Layout/Control/VBoxContainer"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Layout/Control/VBoxContainer/HBoxContainer2"]
margin_right = 850.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "You must also make sure you do not get hit by a zombie. To avoid that you can aim at them and shoot them down with a left click. Be careful because they run faster than you do. There are also pits which you must jump over."
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/Control/VBoxContainer/HBoxContainer2"]
margin_left = 854.0
margin_right = 1024.0
margin_bottom = 96.0

[node name="PitButton" type="Button" parent="Layout/Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 170.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "Pit sound"

[node name="ZombieButton" type="Button" parent="Layout/Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 40.0
margin_right = 170.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = "Zombie sound"

[node name="EndAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PitAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ZombieAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="pressed" from="Layout/Control/VBoxContainer/HBoxContainer/EndButton" to="." method="_on_EndButton_pressed"]
[connection signal="pressed" from="Layout/Control/VBoxContainer/HBoxContainer2/VBoxContainer/PitButton" to="." method="_on_PitButton_pressed"]
[connection signal="pressed" from="Layout/Control/VBoxContainer/HBoxContainer2/VBoxContainer/ZombieButton" to="." method="_on_ZombieButton_pressed"]
[connection signal="timeout" from="AudioTimer" to="." method="_on_AudioTimer_timeout"]

[editable path="Layout"]
